Improve page comparator tests